# Project_Euler

./: .gitignore  DESCRIPTION  README.md  pyproject.toml
Python/: Prime_Sieve.py  utils.py
Python/scripts/: gen_problem.py  run_problem.py
Python/solutions/: 001.py  002.py  003.py  004.py  005.py  006.py  007.py  008.py  009.py
R/: 003.R  Prime Functions.R  Utility Functions.R  polynomials.R
Solution Scripts/: 001.py  002.R  002.py  003.R  003.py  004.py  005.py  006.py  007.py  008.py  009.py  010.R  011.R  012.R  013.R  014.R  015.R  016.R  018.R  019.R  020.R  021.R  023.R  024.R  025.R  026.R  027.R  028.R  029.R  030.R  031.R  032.R  033.R  034.R  035.R  036.R  037.R  038.R  039.R  040.R  (+3 more)
tests/testthat/: prime_lookup.csv  test_Prime Functions.R
